--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 script-dowload-channels/output
 detoxigram-bot/.env
 model_evaluation_scripts/classifiers_classes_api/toxigen_hatebert
+model_evaluation_scripts/classifiers_classes_api/minstral
 model_evaluation_scripts/classifiers_classes_api/__pycache__
 model_evaluation_scripts/classifiers_classes_api/classifiers_classes_api/__pycache__
