--- a/requirements.txt
+++ b/requirements.txt
@@ -1,179 +1,79 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-abseil-cpp=20211102.0=hd4dd3e8_0
-aiohttp=3.9.0=py311h5eee18b_0
-aiosignal=1.2.0=pyhd3eb1b0_0
-annotated-types=0.6.0=pypi_0
-anyio=4.2.0=pypi_0
-arrow-cpp=11.0.0=h374c478_2
-attrs=23.1.0=py311h06a4308_0
-aws-c-common=0.6.8=h5eee18b_1
-aws-c-event-stream=0.1.6=h6a678d5_6
-aws-checksums=0.1.11=h5eee18b_2
-aws-sdk-cpp=1.8.185=h721c034_1
-blas=1.0=mkl
-boost-cpp=1.82.0=hdb19cb5_2
-bottleneck=1.3.5=py311hbed6279_0
-brotli-python=1.0.9=py311h6a678d5_7
-bzip2=1.0.8=h7b6447c_0
-c-ares=1.19.1=h5eee18b_0
-ca-certificates=2023.12.12=h06a4308_0
-cachetools=5.3.2=pypi_0
-certifi=2023.11.17=py311h06a4308_0
-cffi=1.16.0=py311h5eee18b_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-contourpy=1.2.0=pypi_0
-cryptography=41.0.7=py311hdda0065_0
-cycler=0.12.1=pypi_0
-dataclasses-json=0.6.3=pypi_0
-datasets=2.16.1=pypi_0
-dill=0.3.6=py311h06a4308_0
-distro=1.9.0=pypi_0
-filelock=3.13.1=py311h06a4308_0
-fonttools=4.47.2=pypi_0
-frozenlist=1.4.0=py311h5eee18b_0
-fsspec=2023.10.0=py311h06a4308_0
-gflags=2.2.2=he6710b0_0
-git-filter-repo=2.38.0=pypi_0
-glog=0.5.0=h2531618_0
-google-api-core=2.15.0=pypi_0
-google-api-python-client=2.113.0=pypi_0
-google-auth=2.26.2=pypi_0
-google-auth-httplib2=0.2.0=pypi_0
-googleapis-common-protos=1.62.0=pypi_0
-greenlet=3.0.3=pypi_0
-grpc-cpp=1.48.2=he1ff14a_1
-h11=0.14.0=pypi_0
-httpcore=1.0.2=pypi_0
-httplib2=0.22.0=pypi_0
-httpx=0.26.0=pypi_0
-huggingface-hub=0.20.2=pypi_0
-icu=73.1=h6a678d5_0
-idna=3.4=py311h06a4308_0
-importlib-metadata=6.0.0=py311h06a4308_0
-intel-openmp=2023.1.0=hdb19cb5_46306
-jinja2=3.1.2=pypi_0
-jsonpatch=1.33=pypi_0
-jsonpointer=2.4=pypi_0
-kiwisolver=1.4.5=pypi_0
-krb5=1.20.1=h143b758_1
-langchain=0.1.5=pypi_0
-langchain-community=0.0.17=pypi_0
-langchain-core=0.1.18=pypi_0
-langchain-openai=0.0.5=pypi_0
-langsmith=0.0.85=pypi_0
-ld_impl_linux-64=2.38=h1181459_1
-libboost=1.82.0=h109eef0_2
-libbrotlicommon=1.0.9=h5eee18b_7
-libbrotlidec=1.0.9=h5eee18b_7
-libbrotlienc=1.0.9=h5eee18b_7
-libcurl=8.4.0=h251f7ec_1
-libedit=3.1.20230828=h5eee18b_0
-libev=4.33=h7f8727e_1
-libevent=2.1.12=hdbd6064_1
-libffi=3.4.4=h6a678d5_0
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libnghttp2=1.57.0=h2d74bed_0
-libprotobuf=3.20.3=he621ea3_0
-libssh2=1.10.0=hdbd6064_2
-libstdcxx-ng=11.2.0=h1234567_1
-libthrift=0.15.0=h1795dd8_2
-libuuid=1.41.5=h5eee18b_0
-lz4-c=1.9.4=h6a678d5_0
-markupsafe=2.1.3=pypi_0
-marshmallow=3.20.2=pypi_0
-matplotlib=3.8.2=pypi_0
-mkl=2023.1.0=h213fc3f_46344
-mkl-service=2.4.0=py311h5eee18b_1
-mkl_fft=1.3.8=py311h5eee18b_0
-mkl_random=1.2.4=py311hdb19cb5_0
-mpmath=1.3.0=pypi_0
-multidict=6.0.4=py311h5eee18b_0
-multiprocess=0.70.14=py311h06a4308_0
-mypy-extensions=1.0.0=pypi_0
-ncurses=6.4=h6a678d5_0
-networkx=3.2.1=pypi_0
-numexpr=2.8.7=py311h65dcdc2_0
-numpy=1.26.2=py311h08b1b3b_0
-numpy-base=1.26.2=py311hf175353_0
-nvidia-cublas-cu12=12.1.3.1=pypi_0
-nvidia-cuda-cupti-cu12=12.1.105=pypi_0
-nvidia-cuda-nvrtc-cu12=12.1.105=pypi_0
-nvidia-cuda-runtime-cu12=12.1.105=pypi_0
-nvidia-cudnn-cu12=8.9.2.26=pypi_0
-nvidia-cufft-cu12=11.0.2.54=pypi_0
-nvidia-curand-cu12=10.3.2.106=pypi_0
-nvidia-cusolver-cu12=11.4.5.107=pypi_0
-nvidia-cusparse-cu12=12.1.0.106=pypi_0
-nvidia-nccl-cu12=2.18.1=pypi_0
-nvidia-nvjitlink-cu12=12.3.101=pypi_0
-nvidia-nvtx-cu12=12.1.105=pypi_0
-openai=1.10.0=pypi_0
-openssl=3.0.12=h7f8727e_0
-orc=1.7.4=hb3bc3d3_1
-packaging=23.2=pypi_0
-pandas=2.1.4=py311ha02d727_0
-perspective-py=0.3.4=pypi_0
-pillow=10.2.0=pypi_0
-pip=23.3.1=py311h06a4308_0
-protobuf=4.25.2=pypi_0
-pyarrow=11.0.0=py311hd8e8d9b_1
-pyarrow-hotfix=0.6=pypi_0
-pyasn1=0.5.1=pypi_0
-pyasn1-modules=0.3.0=pypi_0
-pycountry=23.12.11=pypi_0
-pycparser=2.21=pyhd3eb1b0_0
-pydantic=2.6.0=pypi_0
-pydantic-core=2.16.1=pypi_0
-pyopenssl=23.2.0=py311h06a4308_0
-pyparsing=3.1.1=pypi_0
-pysocks=1.7.1=py311h06a4308_0
-python=3.11.5=h955ad1f_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-tzdata=2023.3=pyhd3eb1b0_0
-python-xxhash=2.0.2=py311h5eee18b_1
-pytz=2023.3.post1=py311h06a4308_0
-pyyaml=6.0.1=py311h5eee18b_0
-re2=2022.04.01=h295c915_0
-readline=8.2=h5eee18b_0
-regex=2023.10.3=py311h5eee18b_0
-requests=2.31.0=py311h06a4308_0
-responses=0.13.3=pyhd3eb1b0_0
-rsa=4.9=pypi_0
-safetensors=0.4.0=py311h24d97f6_0
-setuptools=68.2.2=py311h06a4308_0
-six=1.16.0=pyhd3eb1b0_1
-snappy=1.1.10=h6a678d5_1
-sniffio=1.3.0=pypi_0
-sqlalchemy=2.0.25=pypi_0
-sqlite=3.41.2=h5eee18b_0
-sympy=1.12=pypi_0
-tbb=2021.8.0=hdb19cb5_0
-tenacity=8.2.3=pypi_0
-tiktoken=0.5.2=pypi_0
-tk=8.6.12=h1ccaba5_0
-tokenizers=0.13.3=py311h22610ee_0
-torch=2.1.2=pypi_0
-tqdm=4.65.0=py311h92b7b1e_0
-transformers=4.32.1=py311h06a4308_0
-triton=2.1.0=pypi_0
-typing=3.7.4.3=pypi_0
-typing-extensions=4.7.1=py311h06a4308_0
-typing-inspect=0.9.0=pypi_0
-typing_extensions=4.7.1=py311h06a4308_0
-tzdata=2023c=h04d1e81_0
-uritemplate=4.1.1=pypi_0
-urllib3=1.26.18=py311h06a4308_0
-utf8proc=2.6.1=h27cfd23_0
-wheel=0.41.2=py311h06a4308_0
-xxhash=0.8.0=h7f8727e_3
-xz=5.4.5=h5eee18b_0
-yaml=0.2.5=h7b6447c_0
-yarl=1.9.3=py311h5eee18b_0
-zipp=3.11.0=py311h06a4308_0
-zlib=1.2.13=h5eee18b_0
-zstd=1.5.5=hc292b87_0
+accelerate==0.27.2
+annotated-types==0.6.0
+anyio==4.2.0
+cachetools==5.3.2
+contourpy==1.2.0
+cycler==0.12.1
+dataclasses-json==0.6.3
+datasets==2.16.1
+diskcache==5.6.3
+distro==1.9.0
+evaluate==0.4.1
+fonttools==4.47.2
+git-filter-repo==2.38.0
+google-api-core==2.15.0
+google-api-python-client==2.113.0
+google-auth==2.26.2
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.62.0
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.2
+httplib2==0.22.0
+httpx==0.26.0
+huggingface-hub==0.20.2
+Jinja2==3.1.2
+jsonpatch==1.33
+jsonpointer==2.4
+kiwisolver==1.4.5
+langchain==0.1.5
+langchain-community==0.0.17
+langchain-core==0.1.18
+langchain-openai==0.0.5
+langsmith==0.0.85
+llama_cpp_python==0.2.44
+MarkupSafe==2.1.3
+marshmallow==3.20.2
+matplotlib==3.8.2
+mpmath==1.3.0
+mypy-extensions==1.0.0
+networkx==3.2.1
+# nvidia-cublas-cu12==12.1.3.1
+# nvidia-cuda-cupti-cu12==12.1.105
+# nvidia-cuda-nvrtc-cu12==12.1.105
+# nvidia-cuda-runtime-cu12==12.1.105
+# nvidia-cudnn-cu12==8.9.2.26
+# nvidia-cufft-cu12==11.0.2.54
+# nvidia-curand-cu12==10.3.2.106
+# nvidia-cusolver-cu12==11.4.5.107
+# nvidia-cusparse-cu12==12.1.0.106
+# nvidia-nccl-cu12==2.18.1
+# nvidia-nvjitlink-cu12==12.3.101
+# nvidia-nvtx-cu12==12.1.105
+openai==1.10.0
+packaging==23.2
+perspective.py==0.3.4
+pillow==10.2.0
+protobuf==4.25.2
+psutil==5.9.8
+pyarrow==11.0.0
+pyarrow-hotfix==0.6
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycountry==23.12.11
+pydantic==2.6.0
+pydantic_core==2.16.1
+pyparsing==3.1.1
+rsa==4.9
+sniffio==1.3.0
+SQLAlchemy==2.0.25
+sympy==1.12
+tenacity==8.2.3
+tiktoken==0.5.2
+torch==2.1.2
+# triton==2.1.0
+typing==3.7.4.3
+typing-inspect==0.9.0
+uritemplate==4.1.1
+pandas
+seaborn
