--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ model_evaluation_scripts/classifiers_classes_api/minstral
 model_evaluation_scripts/classifiers_classes_api/__pycache__
 model_evaluation_scripts/classifiers_classes_api/classifiers_classes_api/__pycache__
 .env
+detoxigram_bot/.env
