--- a/requirements.txt
+++ b/requirements.txt
@@ -75,6 +75,7 @@ torch==2.1.2
 typing==3.7.4.3
 typing-inspect==0.9.0
 uritemplate==4.1.1
+huggingface-hub==0.20.3
 pandas
 seaborn
 langchain-mistralai
