--- a/model_evaluation_scripts/classifiers_classes_api/multibert/config.json
+++ b/model_evaluation_scripts/classifiers_classes_api/multibert/config.json
@@ -1,11 +1,11 @@
 {
-  "_name_or_path": "classifiers_classes_api/multi_label_bert",
+  "_name_or_path": "bert_models/modelos_bert/hateBERT/",
+  "_num_labels": 2,
   "architectures": [
     "BertForSequenceClassification"
   ],
   "attention_probs_dropout_prob": 0.1,
   "classifier_dropout": null,
-  "gradient_checkpointing": false,
   "hidden_act": "gelu",
   "hidden_dropout_prob": 0.1,
   "hidden_size": 768,
@@ -34,6 +34,7 @@
   "model_type": "bert",
   "num_attention_heads": 12,
   "num_hidden_layers": 12,
+  "output_past": true,
   "pad_token_id": 0,
   "position_embedding_type": "absolute",
   "problem_type": "multi_label_classification",
@@ -41,5 +42,5 @@
   "transformers_version": "4.38.1",
   "type_vocab_size": 2,
   "use_cache": true,
-  "vocab_size": 28996
+  "vocab_size": 30522
 }
