--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,28 @@
 accelerate==0.27.2
+aiohttp @ file:///croot/aiohttp_1701112538292/work
+aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
 annotated-types==0.6.0
 anyio==4.2.0
+attrs @ file:///croot/attrs_1695717823297/work
+Bottleneck @ file:///work/ci_py311/bottleneck_1676827011612/work
+Brotli @ file:///work/ci_py311/brotli-split_1676830125088/work
 cachetools==5.3.2
+certifi @ file:///croot/certifi_1700501669400/work/certifi
+cffi @ file:///croot/cffi_1700254295673/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 contourpy==1.2.0
+cryptography @ file:///croot/cryptography_1702070282333/work
 cycler==0.12.1
 dataclasses-json==0.6.3
 datasets==2.16.1
+dill @ file:///work/ci_py311/dill_1676827712960/work
 diskcache==5.6.3
 distro==1.9.0
 evaluate==0.4.1
+filelock @ file:///croot/filelock_1700591183607/work
 fonttools==4.47.2
+frozenlist @ file:///croot/frozenlist_1698702560391/work
+fsspec @ file:///croot/fsspec_1701286474621/work
 git-filter-repo==2.38.0
 google-api-core==2.15.0
 google-api-python-client==2.113.0
@@ -21,61 +34,96 @@ h11==0.14.0
 httpcore==1.0.2
 httplib2==0.22.0
 httpx==0.26.0
+httpx-sse==0.4.0
 huggingface-hub==0.20.2
+idna @ file:///work/ci_py311/idna_1676822698822/work
+importlib-metadata @ file:///croot/importlib-metadata_1678997070253/work
 Jinja2==3.1.2
 jsonpatch==1.33
 jsonpointer==2.4
 kiwisolver==1.4.5
 langchain==0.1.5
 langchain-community==0.0.17
-langchain-core==0.1.18
+langchain-core==0.1.48
+langchain-mistralai==0.1.5
 langchain-openai==0.0.5
-langsmith==0.0.85
+langsmith==0.1.52
 llama_cpp_python==0.2.44
 MarkupSafe==2.1.3
 marshmallow==3.20.2
 matplotlib==3.8.2
+mkl-fft @ file:///croot/mkl_fft_1695058164594/work
+mkl-random @ file:///croot/mkl_random_1695059800811/work
+mkl-service==2.4.0
 mpmath==1.3.0
+multidict @ file:///croot/multidict_1701096859099/work
+multiprocess @ file:///work/ci_py311/multiprocess_1676841234722/work
 mypy-extensions==1.0.0
 networkx==3.2.1
-# nvidia-cublas-cu12==12.1.3.1
-# nvidia-cuda-cupti-cu12==12.1.105
-# nvidia-cuda-nvrtc-cu12==12.1.105
-# nvidia-cuda-runtime-cu12==12.1.105
-# nvidia-cudnn-cu12==8.9.2.26
-# nvidia-cufft-cu12==11.0.2.54
-# nvidia-curand-cu12==10.3.2.106
-# nvidia-cusolver-cu12==11.4.5.107
-# nvidia-cusparse-cu12==12.1.0.106
-# nvidia-nccl-cu12==2.18.1
-# nvidia-nvjitlink-cu12==12.3.101
-# nvidia-nvtx-cu12==12.1.105
+numexpr @ file:///croot/numexpr_1696515281613/work
+numpy @ file:///croot/numpy_and_numpy_base_1701295038894/work/dist/numpy-1.26.2-cp311-cp311-linux_x86_64.whl#sha256=14973c61f3a96f31efa18449e9a0ba592baf1d942a48d1f461f877ee439e848f
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
 openai==1.10.0
+orjson==3.10.2
 packaging==23.2
+pandas @ file:///croot/pandas_1702317985682/work/dist/pandas-2.1.4-cp311-cp311-linux_x86_64.whl#sha256=a15c481f210e34ff91dac4944a5f8f0fe38ff2c3afa7c45ea621ff460d6f9b57
 perspective.py==0.3.4
 pillow==10.2.0
 protobuf==4.25.2
 psutil==5.9.8
+pyaes==1.6.1
 pyarrow==11.0.0
 pyarrow-hotfix==0.6
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycountry==23.12.11
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 pydantic==2.6.0
 pydantic_core==2.16.1
+pyOpenSSL @ file:///croot/pyopenssl_1690223430423/work
 pyparsing==3.1.1
+PySocks @ file:///work/ci_py311/pysocks_1676822712504/work
+pyTelegramBotAPI==4.17.0
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-dotenv==1.0.1
+pytz @ file:///croot/pytz_1695131579487/work
+PyYAML @ file:///croot/pyyaml_1698096049011/work
+regex @ file:///croot/regex_1696515298636/work
+requests @ file:///croot/requests_1690400202158/work
+responses @ file:///tmp/build/80754af9/responses_1619800270522/work
 rsa==4.9
+safetensors==0.4.3
+seaborn==0.13.2
+six @ file:///tmp/build/80754af9/six_1644875935023/work
 sniffio==1.3.0
 SQLAlchemy==2.0.25
 sympy==1.12
+telebot==0.0.5
+Telethon==1.35.0
 tenacity==8.2.3
 tiktoken==0.5.2
+tokenizers==0.19.1
 torch==2.1.2
-# triton==2.1.0
+tqdm @ file:///croot/tqdm_1679561862951/work
+transformers==4.40.1
+triton==2.1.0
 typing==3.7.4.3
 typing-inspect==0.9.0
+typing_extensions @ file:///croot/typing_extensions_1690297465030/work
+tzdata @ file:///croot/python-tzdata_1690578112552/work
 uritemplate==4.1.1
-huggingface-hub==0.20.3
-pandas
-seaborn
-langchain-mistralai
+urllib3 @ file:///croot/urllib3_1698257533958/work
+xxhash @ file:///work/ci_py311/python-xxhash_1676842384694/work
+yarl @ file:///croot/yarl_1701105127787/work
+zipp @ file:///work/ci_py311/zipp_1676822894295/work
